# algo

./: .gitignore  .pre-commit-config.yaml  main.py  notes.md  pyproject.toml  tmp_script.py
.github/workflows/: ci.yaml
data/canonical/: ohlcv.parquet
data/cleaned/: eligibility.parquet  ohlcv.parquet
src/algo/backtest/: engine_fast.py  engine_realistic.py  runs.py  stats.py
src/algo/config/: settings.py
src/algo/core/: types.py
src/algo/data/: cleaning.py  prices.py  universe.py
src/algo/scripts/: find_extreme_returns.py  inspect_prices.py  rebuild_data.py  run_backtest.py
src/algo/strategies/: dip_buyer.py  sma_trend.py
src/algo/symbols/: assets.yaml  registry.py
tests/: test_prices_path.py  test_settings.py
