[project]
name = "algo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]